# SatDump

.github/workflows/: all_build.yml  docs.yml
pipelines/: iq_manipulation.json
plugins/: CMakeLists.txt
plugins/analog_support/generic/: module_generic_analog_demod.cpp  module_generic_analog_demod.h
plugins/baseband_toolbox_app/: CMakeLists.txt  bb_container.cpp  bb_container.h  bb_toolbox.cpp  bb_toolbox.h  main.cpp
plugins/iq_manipulation_support/: CMakeLists.txt  main.cpp
plugins/iq_manipulation_support/iq/: module_iq_conversion.cpp  module_iq_conversion.h  module_iq_re.cpp  module_iq_re.h
plugins/ominous_support/: main.cpp
plugins/ominous_support/ominous/: module_ominous_instruments.h
plugins/ominous_support/simulator/: simulator_handler.cpp  simulator_handler.h
plugins/ssdv_support/: CMakeLists.txt  main.cpp
plugins/ssdv_support/ssdv/: ssdv_decode.cpp  ssdv_decode.h  ssdv_ng_decoder.cpp  ssdv_ng_decoder.h  test.cpp  test.h
plugins/wip_spectrogram_app/: main.cpp  spectrogram.cpp  spectrogram.h  spectrogram_container.cpp  spectrogram_container.h  tool.h
plugins/wip_spectrogram_app/tools/: spectrogram_image.h
resources/pipelines/: SSDV.json  SSDV2.json  Test.json
src-core/common/uhrit/: crc_table.h  generic_xrit_calibrator.h  uhrit_demux.cpp  uhrit_demux.h  uhrit_file.cpp  uhrit_file.h  uhrit_productizer.cpp  uhrit_productizer.h
src-core/dsp/fft/: fft_gen.cpp  fft_gen.h
src-core/dsp/flowgraph/: dsp_flowgraph_register.cpp
src-core/dsp/utils/: cosine_source.cpp  cosine_source.h  (+2 more)
src-core/utils/: time.cpp  time.h
src-testing/: main.cpp
(+14 files in other folders)
